[gd_scene load_steps=4 format=3 uid="uid://coja02dkgqrpe"]

[ext_resource type="Script" path="res://scripts/ControlSettings.gd" id="1_8gq3f"]
[ext_resource type="Theme" uid="uid://p366em87j2bw" path="res://themes/game_theme.tres" id="1_krfdx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch218"]
bg_color = Color(0.6, 0.6, 0.6, 0.176471)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.745098, 0, 0.72549, 0.364706)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Panel" type="Panel"]
offset_right = 1160.0
offset_bottom = 647.0
theme = ExtResource("1_krfdx")
script = ExtResource("1_8gq3f")

[node name="ActionList" type="OptionButton" parent="."]
layout_mode = 2
offset_left = 269.0
offset_top = 118.0
offset_right = 485.0
offset_bottom = 171.0

[node name="WaitingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 628.0
offset_top = 128.0
offset_right = 818.0
offset_bottom = 166.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ch218")

[node name="AssignButton" type="Button" parent="."]
layout_mode = 2
offset_left = 247.0
offset_top = 477.0
offset_right = 481.0
offset_bottom = 532.0
text = "Asignar"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 30.0
offset_right = 551.0
offset_bottom = 72.0
text = "Configuracion de controles"

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 472.0
offset_right = 787.0
offset_bottom = 535.0
text = "Volver"
